--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vCard - Personal Portfolio</title>
+    <title>Meet Patel</title>
 
     <!--
     - favicon
   -->
     <link
       rel="shortcut icon"
-      href="./assets/images/logo.ico"
+      href="./assets/images/avatar-1.png"
       type="image/x-icon"
     />
 
@@ -56,9 +56,12 @@
 
             <p class="title">Software Engineer</p>
 
-            <button class="form-btn title" style="margin-top: 5px;">
-              <span>Download Resume</span>
-            </button>
+            <a href="./Meet-Patel.pdf" download="Meet-Patel.pdf">
+              <button class="form-btn title" style="margin-top: 5px;">
+                <span>Download Resume</span>
+              </button>
+            </a>
+            
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
@@ -910,10 +913,9 @@
             <a href="${project.html_url}" target="_blank" class="icon-link">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
-            
         </div>
         <!-- Placeholder image with text -->
-        <img src="https://placehold.co/600x400?text=${encodeURIComponent(project.name)}" alt="${project.name}" loading="lazy" />
+        <img src="${project.image}" alt="${project.name}" loading="lazy" />
     </figure>
     <h3 class="project-title">${project.name}</h3>
     <p class="project-category">${project.description}</p>
