--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
                 <ion-icon name="logo-github"></ion-icon>
               </a>
             </li>
+
+            <li class="social-item">
+              <a
+                href="https://medium.com/@meet57.mp"
+                class="social-link"
+                target="_blank"
+              >
+                <ion-icon name="logo-medium"></ion-icon>
+              </a>
+            </li>
+
           </ul>
         </div>
       </aside>
